fix: Linter warnings (#771)