@@ -13,8 +13,8 @@
  *     David Carver - bug 277770 - format of XSDouble for zero values incorrect.
  *     Mukul Gandhi - bug 279406 - improvements to negative zero values for xs:double
  *     David Carver (STAR) - bug 262765 - various numeric formatting fixes and calculations
- *     David Carver (STAR) - bug 262765 - fixed rounding errors.      
- *     Jesper Steen Moller - Bug 286062 - Fix idiv error cases and increase precision  
+ *     David Carver (STAR) - bug 262765 - fixed rounding errors.
+ *     Jesper Steen Moller - Bug 286062 - Fix idiv error cases and increase precision
  *     Mukul Gandhi - bug 280798 - PsychoPath support for JDK 1.4
  *******************************************************************************/
 
@@ -44,12 +44,12 @@ public class XSDouble extends NumericType {
 
 	/**
 	 * Initialises a representation of the supplied number
-	 * 
+	 *
 	 * @param x
 	 *            Number to be stored
 	 */
 	public XSDouble(double x) {
-		_value = new Double(x);
+		_value = Double.valueOf(x);
 	}
 
 	/**
@@ -61,18 +61,18 @@ public class XSDouble extends NumericType {
 
 	/**
 	 * Initialises using a String represented number
-	 * 
+	 *
 	 * @param init
 	 *            String representation of the number to be stored
 	 */
 	public XSDouble(String init) throws DynamicError {
 		try {
 			if (init.equals("-INF")) {
-				_value = new Double(Double.NEGATIVE_INFINITY);
+				_value = Double.valueOf(Double.NEGATIVE_INFINITY);
 			} else if (init.equals("INF")) {
-				_value = new Double(Double.POSITIVE_INFINITY);
+				_value = Double.valueOf(Double.POSITIVE_INFINITY);
 			} else {
-				_value = new Double(init);
+				_value = Double.valueOf(init);
 			}
 		} catch (NumberFormatException e) {
 			throw DynamicError.cant_cast(null);
@@ -81,7 +81,7 @@ public class XSDouble extends NumericType {
 
 	/**
 	 * Creates a new representation of the String represented number
-	 * 
+	 *
 	 * @param i
 	 *            String representation of the number to be stored
 	 * @return New XSDouble representing the number supplied
@@ -90,11 +90,11 @@ public class XSDouble extends NumericType {
 		try {
 			Double d = null;
 			if (i.equals("INF")) {
-				d = new Double(Double.POSITIVE_INFINITY);
+				d = Double.valueOf(Double.POSITIVE_INFINITY);
 			} else if (i.equals("-INF")) {
-				d = new Double(Double.NEGATIVE_INFINITY);
+				d = Double.valueOf(Double.NEGATIVE_INFINITY);
 			} else {
-				d = new Double(i);
+				d = Double.valueOf(i);
 			}
 			return new XSDouble(d.doubleValue());
 		} catch (NumberFormatException e) {
@@ -105,7 +105,7 @@ public class XSDouble extends NumericType {
 	/**
 	 * Creates a new result sequence consisting of the retrievable double number
 	 * in the supplied result sequence
-	 * 
+	 *
 	 * @param arg
 	 *            The result sequence from which to extract the double number.
 	 * @throws DynamicError
@@ -123,19 +123,19 @@ public class XSDouble extends NumericType {
 			aat instanceof XSAnyURI) {
 			throw DynamicError.invalidType();
 		}
-		
+
 		if (!isCastable(aat)) {
 			throw DynamicError.cant_cast(null);
 		}
 
 		XSDouble d = castDouble(aat);
-		
+
 		if (d == null)
 			throw DynamicError.cant_cast(null);
 
 		return d;
 	}
-	
+
 	private boolean isCastable(Item aat) {
 		if (aat instanceof XSString || aat instanceof XSUntypedAtomic ||
 			aat instanceof NodeType) {
@@ -146,7 +146,7 @@ public class XSDouble extends NumericType {
 		}
 		return false;
 	}
-	
+
 	private XSDouble castDouble(Item aat) {
 		if (aat instanceof XSBoolean) {
 			if (aat.getStringValue().equals("true")) {
@@ -156,12 +156,12 @@ public class XSDouble extends NumericType {
 			}
 		}
 		return parse_double(aat.getStringValue());
-		
+
 	}
 
 	/**
 	 * Retrieves the datatype's full pathname
-	 * 
+	 *
 	 * @return "xs:double" which is the datatype's full pathname
 	 */
 	public String string_type() {
@@ -170,7 +170,7 @@ public class XSDouble extends NumericType {
 
 	/**
 	 * Retrieves the datatype's name
-	 * 
+	 *
 	 * @return "double" which is the datatype's name
 	 */
 	public String type_name() {
@@ -179,7 +179,7 @@ public class XSDouble extends NumericType {
 
 	/**
 	 * Retrieves a String representation of the Decimal value stored
-	 * 
+	 *
 	 * @return String representation of the Decimal value stored
 	 */
 	public String getStringValue() {
@@ -200,7 +200,7 @@ public class XSDouble extends NumericType {
 
 	/**
 	 * Check for whether this XSDouble represents NaN
-	 * 
+	 *
 	 * @return True if this XSDouble represents NaN. False otherwise.
 	 */
 	public boolean nan() {
@@ -209,7 +209,7 @@ public class XSDouble extends NumericType {
 
 	/**
 	 * Check for whether this XSDouble represents an infinite number (negative or positive)
-	 * 
+	 *
 	 * @return True if this XSDouble represents infinity. False otherwise.
 	 */
 	public boolean infinite() {
@@ -218,7 +218,7 @@ public class XSDouble extends NumericType {
 
 	/**
 	 * Check for whether this XSDouble represents 0
-	 * 
+	 *
 	 * @return True if this XSDouble represents 0. False otherwise.
 	 */
 	public boolean zero() {
@@ -227,9 +227,9 @@ public class XSDouble extends NumericType {
 
 	/*
 	 * Check for whether this XSDouble represents -0
-	 * 
+	 *
 	 * @return True if this XSDouble represents -0. False otherwise.
-	 * 
+	 *
 	 * @since 1.1
 	 */
 	public boolean negativeZero() {
@@ -238,7 +238,7 @@ public class XSDouble extends NumericType {
 
 	/**
 	 * Retrieves the actual value of the number stored
-	 * 
+	 *
 	 * @return The actual value of the number stored
 	 */
 	public double double_value() {
@@ -250,7 +250,7 @@ public class XSDouble extends NumericType {
 	 * @param aa
 	 *            Representation to be compared with (must currently be of type
 	 *            XSDouble)
-	 * 
+	 *
 	 * @return True if the 2 representations represent the same number. False
 	 *         otherwise
 	 * @since 1.1
@@ -258,7 +258,7 @@ public class XSDouble extends NumericType {
 	public boolean eq(AnyType aa, DynamicContext dynamicContext) throws DynamicError {
 		ResultSequence rs = ResultSequenceFactory.create_new(aa);
 		ResultSequence crs = constructor(rs);
-		
+
 		if (crs.empty()) {
 			throw DynamicError.throw_type_error();
 		}
@@ -268,16 +268,16 @@ public class XSDouble extends NumericType {
 		if (d.nan() && nan()) {
 			return false;
 		}
-		
-		Double thatvalue = new Double(d.double_value());
-		Double thisvalue = new Double(double_value());
-		
+
+		Double thatvalue = Double.valueOf(d.double_value());
+		Double thisvalue = Double.valueOf(double_value());
+
 		return thisvalue.equals(thatvalue);
 	}
 
 	/**
-	 * Comparison between this number and the supplied representation. 
-	 * 
+	 * Comparison between this number and the supplied representation.
+	 *
 	 * @param arg
 	 *            Representation to be compared with (must currently be of type
 	 *            XSDouble)
@@ -286,7 +286,7 @@ public class XSDouble extends NumericType {
 	 */
 	public boolean gt(AnyType arg, DynamicContext context) throws DynamicError {
 		Item carg = convertArg(arg);
-		
+
 		XSDouble val = (XSDouble) get_single_type(carg, XSDouble.class);
 		return double_value() > val.double_value();
 	}
@@ -302,7 +302,7 @@ public class XSDouble extends NumericType {
 	 * Comparison between this number and the supplied representation. Currently
 	 * no numeric type promotion exists so the supplied representation must be
 	 * of type XSDouble.
-	 * 
+	 *
 	 * @param arg
 	 *            Representation to be compared with (must currently be of type
 	 *            XSDouble)
@@ -319,8 +319,8 @@ public class XSDouble extends NumericType {
 	// math
 	/**
 	 * Mathematical addition operator between this XSDouble and the supplied
-	 * ResultSequence. 
-	 * 
+	 * ResultSequence.
+	 *
 	 * @param arg
 	 *            The ResultSequence to perform an addition with
 	 * @return A XSDouble consisting of the result of the mathematical addition.
@@ -328,7 +328,7 @@ public class XSDouble extends NumericType {
 	public ResultSequence plus(ResultSequence arg) throws DynamicError {
 		ResultSequence carg = convertResultSequence(arg);
 		Item at = get_single_arg(carg);
-		
+
 		if (!(at instanceof XSDouble))
 			DynamicError.throw_type_error();
 		XSDouble val = (XSDouble) at;
@@ -355,8 +355,8 @@ public class XSDouble extends NumericType {
 
 	/**
 	 * Mathematical subtraction operator between this XSDouble and the supplied
-	 * ResultSequence. 
-	 * 
+	 * ResultSequence.
+	 *
 	 * @param arg
 	 *            The ResultSequence to perform an subtraction with
 	 * @return A XSDouble consisting of the result of the mathematical
@@ -364,7 +364,7 @@ public class XSDouble extends NumericType {
 	 */
 	public ResultSequence minus(ResultSequence arg) throws DynamicError {
 		ResultSequence carg = convertResultSequence(arg);
-		
+
 		XSDouble val = (XSDouble) get_single_type(carg, XSDouble.class);
 
 		return ResultSequenceFactory.create_new(new XSDouble(double_value()
@@ -375,7 +375,7 @@ public class XSDouble extends NumericType {
 	 * Mathematical multiplication operator between this XSDouble and the
 	 * supplied ResultSequence. Due to no numeric type promotion or conversion,
 	 * the ResultSequence must be of type XSDouble.
-	 * 
+	 *
 	 * @param arg
 	 *            The ResultSequence to perform an multiplication with
 	 * @return A XSDouble consisting of the result of the mathematical
@@ -391,8 +391,8 @@ public class XSDouble extends NumericType {
 
 	/**
 	 * Mathematical division operator between this XSDouble and the supplied
-	 * ResultSequence. 
-	 * 
+	 * ResultSequence.
+	 *
 	 * @param arg
 	 *            The ResultSequence to perform an division with
 	 * @return A XSDouble consisting of the result of the mathematical division.
@@ -407,8 +407,8 @@ public class XSDouble extends NumericType {
 
 	/**
 	 * Mathematical integer division operator between this XSDouble and the
-	 * supplied ResultSequence. 
-	 * 
+	 * supplied ResultSequence.
+	 *
 	 * @param arg
 	 *            The ResultSequence to perform an integer division with
 	 * @return A XSInteger consisting of the result of the mathematical integer
@@ -434,8 +434,8 @@ public class XSDouble extends NumericType {
 
 	/**
 	 * Mathematical modulus operator between this XSDouble and the supplied
-	 * ResultSequence. 
-	 * 
+	 * ResultSequence.
+	 *
 	 * @param arg
 	 *            The ResultSequence to perform a modulus with
 	 * @return A XSDouble consisting of the result of the mathematical modulus.
@@ -450,7 +450,7 @@ public class XSDouble extends NumericType {
 
 	/**
 	 * Negation of the number stored
-	 * 
+	 *
 	 * @return A XSDouble representing the negation of this XSDecimal
 	 */
 	public ResultSequence unary_minus() {
@@ -461,7 +461,7 @@ public class XSDouble extends NumericType {
 	// functions
 	/**
 	 * Absolutes the number stored
-	 * 
+	 *
 	 * @return A XSDouble representing the absolute value of the number stored
 	 */
 	public NumericType abs() {
@@ -470,7 +470,7 @@ public class XSDouble extends NumericType {
 
 	/**
 	 * Returns the smallest integer greater than the number stored
-	 * 
+	 *
 	 * @return A XSDouble representing the smallest integer greater than the
 	 *         number stored
 	 */
@@ -480,7 +480,7 @@ public class XSDouble extends NumericType {
 
 	/**
 	 * Returns the largest integer smaller than the number stored
-	 * 
+	 *
 	 * @return A XSDouble representing the largest integer smaller than the
 	 *         number stored
 	 */
@@ -490,7 +490,7 @@ public class XSDouble extends NumericType {
 
 	/**
 	 * Returns the closest integer of the number stored.
-	 * 
+	 *
 	 * @return A XSDouble representing the closest long of the number stored.
 	 */
 	public NumericType round() {
@@ -501,7 +501,7 @@ public class XSDouble extends NumericType {
 
 	/**
 	 * Returns the closest integer of the number stored.
-	 * 
+	 *
 	 * @return A XSDouble representing the closest long of the number stored.
 	 */
 	public NumericType round_half_to_even() {
@@ -512,7 +512,7 @@ public class XSDouble extends NumericType {
 	/**
 	 * Returns the closest integer of the number stored with the specified
 	 * precision.
-	 * 
+	 *
 	 * @param precision
 	 *            An integer precision
 	 * @return A XSDouble representing the closest long of the number stored.
